<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/top" />

    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="140dip"
        android:src="@drawable/goods_demo"
        android:scaleType="fitXY"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/id_shop_goodsname"
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="center|left"
            android:paddingLeft="10dip"
            android:text="@string/name1" />

        <TextView
            android:id="@+id/id_shop_goodsjiage"
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="center|left"
            android:paddingLeft="10dip"
            android:text="@string/jiage1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="center|left"
            android:paddingLeft="10dip"
            android:text="@string/jiage2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="center|left"
            android:paddingLeft="10dip"
            android:text="@string/jiage3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:gravity="center|left"
            android:paddingLeft="10dip"
            android:text="@string/jiage4" />
    </LinearLayout>

    <Button
        android:id="@+id/id_SDButton_buy"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_gravity="end"
        android:layout_margin="10dip"
        android:layout_marginBottom="20dip"
        android:background="#eb0000"
        android:text="购买"
        android:textColor="#ffffff" />

</LinearLayout>